--- a/app/src/main/res/layout/fragment_phone_login.xml
+++ b/app/src/main/res/layout/fragment_phone_login.xml
@@ -19,75 +19,111 @@
         tools:context="com.moodup.movies.ui.authentication.SignupFragment">
 
         <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
+            android:id="@+id/enter_phone_number_title"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="148dp"
             android:letterSpacing="0.1"
             android:padding="10dp"
-            android:text="@string/login"
+            android:text="@string/enter_phone_number"
             android:textAlignment="center"
             android:textColor="@android:color/white"
-            android:textSize="32sp"
+            android:textSize="18sp"
             android:textStyle="bold"
+            android:visibility="gone"
+            app:layout_constraintEnd_toStartOf="@+id/guideline3"
+            app:layout_constraintStart_toStartOf="@+id/guideline2"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/enter_confirmation_number_title"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="148dp"
+            android:letterSpacing="0.1"
+            android:padding="10dp"
+            android:text="@string/enter_verification_code"
+            android:textAlignment="center"
+            android:textColor="@android:color/white"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:visibility="gone"
             app:layout_constraintEnd_toStartOf="@+id/guideline3"
             app:layout_constraintStart_toStartOf="@+id/guideline2"
             app:layout_constraintTop_toTopOf="parent" />
 
 
-        <Button
-            android:id="@+id/login_with_phone_btn"
-            android:drawableStart="@drawable/ic_baseline_phone"
+        <EditText
+            android:id="@+id/prefix"
+            android:layout_width="94dp"
+            android:layout_height="56dp"
+            android:layout_marginTop="80dp"
+            android:layout_marginRight="10dp"
+            android:background="@drawable/rounded_edittext"
+            android:hint="@string/prefix"
+            android:padding="15dp"
+            android:visibility="gone"
+            app:layout_constraintEnd_toStartOf="@+id/guideline3"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/guideline2"
+            app:layout_constraintTop_toBottomOf="@+id/enter_phone_number_title" />
+
+
+        <EditText
+            android:id="@+id/phone_number"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="80dp"
+            android:background="@drawable/rounded_edittext"
+            android:hint="@string/phone_number"
+            android:inputType="number"
+            android:layout_marginLeft="5dp"
+            android:padding="15dp"
+            android:visibility="gone"
+            app:layout_constraintEnd_toStartOf="@+id/guideline3"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toEndOf="@+id/prefix"
+            app:layout_constraintTop_toBottomOf="@+id/enter_phone_number_title" />
+
+        <Button
+            android:id="@+id/send_verification_code_btn"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
             android:background="@drawable/auth_rounded_btn"
             android:gravity="center"
             android:letterSpacing="0.2"
             android:padding="15dp"
-            android:text="@string/login_with_phone"
-            android:textAllCaps="false"
+            android:text="@string/send_verification_code"
             android:textColor="@android:color/white"
             android:textSize="16sp"
+            android:visibility="gone"
             app:layout_constraintEnd_toStartOf="@+id/guideline3"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/guideline2"
-            app:layout_constraintTop_toBottomOf="@+id/textView" />
+            app:layout_constraintTop_toBottomOf="@+id/phone_number" />
 
         <EditText
-            android:id="@+id/email_login_text"
+            android:id="@+id/verification_code"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="128dp"
+            android:layout_marginTop="44dp"
             android:background="@drawable/rounded_edittext"
-            android:hint="@string/email"
-            android:inputType="text"
+            android:hint="@string/verification_code"
+            android:inputType="textPassword"
             android:padding="15dp"
+            android:text="@{viewModel.codeMutableLiveData}"
+            android:visibility="gone"
             app:layout_constraintEnd_toStartOf="@+id/guideline3"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/guideline2"
-            app:layout_constraintTop_toBottomOf="@+id/textView" />
+            app:layout_constraintTop_toBottomOf="@+id/enter_confirmation_number_title" />
 
-        <EditText
-            android:id="@+id/password_login_text"
+        <Button
+            android:id="@+id/confirm_verification_code_btn"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="48dp"
-            android:background="@drawable/rounded_edittext"
-            android:hint="@string/password"
-            android:inputType="textPassword"
-            android:padding="15dp"
-            app:layout_constraintEnd_toStartOf="@+id/guideline3"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/guideline2"
-            app:layout_constraintTop_toBottomOf="@+id/email_login_text" />
-
-
-        <Button
-            android:id="@+id/login_btn"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
             android:background="@drawable/auth_rounded_btn"
             android:gravity="center"
             android:letterSpacing="0.2"
@@ -95,47 +131,11 @@
             android:text="@string/login"
             android:textColor="@android:color/white"
             android:textSize="16sp"
+            android:visibility="gone"
             app:layout_constraintEnd_toStartOf="@+id/guideline3"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/guideline2"
-            app:layout_constraintTop_toBottomOf="@+id/password_login_text" />
-
-        <TextView
-            android:id="@+id/forgot_password_btn"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="24dp"
-            android:gravity="center"
-            android:letterSpacing="0.1"
-            android:padding="15dp"
-            android:text="@string/forgot_password"
-            android:textAlignment="center"
-            android:textColor="@android:color/white"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/guideline3"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/guideline2" />
-
-        <TextView
-            android:id="@+id/login_signup_btn"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:letterSpacing="0.1"
-            android:padding="15dp"
-            android:text="@string/signup"
-            android:textAlignment="center"
-            android:textColor="@android:color/white"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@+id/forgot_password_btn"
-            app:layout_constraintEnd_toStartOf="@+id/guideline3"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/guideline2"
-            app:layout_constraintTop_toBottomOf="@+id/login_btn"
-            app:layout_constraintVertical_bias="0.585" />
+            app:layout_constraintTop_toBottomOf="@+id/verification_code" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline2"
