--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#731937</color>
+    <color name="colorPrimaryDark">#efbbcf</color>
+    <color name="colorAccentViola">#c3aed6</color>
+    <color name="colorAccentViolaDark">#8675a9</color>
+    <color name="textColorDay">#000000</color>
+
+    <color name="colorPrimaryNight">#8C493C</color>
+    <color name="colorPrimaryDarkNight">#71374D</color>
+    <color name="colorAccentViolaNight">#50326C</color>
+    <color name="colorAccentViolaDarkNight">#2A1E43</color>
+    <color name="textColorNight">#ffffff</color>
+
     <color name="green">#008000</color>
     <color name="red"> #b22222</color>
 </resources>
